# pytoil

./: .bumpversion.cfg  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .tag.toml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.md  config.html  dodo.py  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  sitemap.xml  spokfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature.yml  feature_request.md  feature_request.yml  question.md  question.yml
.github/scripts/: changelog.sh
.github/workflows/: CI.yml  CodeQL.yml  codeql-analysis.yml  labeler.yml  release.yml  release_drafter.yml
commands/: bug.html  checkout.html  config.html  find.html  gh.html  info.html  keep.html  new.html  pull.html  remove.html  show.html
contributing/: code_of_conduct.html  contributing.html
css/: termynal.css
docs/: config.md  contributing.md  index.md
docs/commands/: bug.md  cache.md  checkout.md  config.md  find.md  gh.md  info.md  keep.md  new.md  project.md  pull.md  remove.md  show.md  sync.md
docs/contributing/: code_of_conduct.md  contributing.md
docs/css/: termynal.css
github/: labels.yml
github/workflows/: labeler.yml
python/: .gitignore  .pre-commit-config.yaml
pytoil/: __init__.py  __main__.py  api.py  cli.py  config.py  env.py  exceptions.py  py.typed  repo.py  vscode.py
pytoil/api/: __init__.py  api.py  models.py  queries.py
pytoil/cli/: __init__.py  cache.py  checkout.py  config.py  docs.py  find.py  gh.py  info.py  keep.py  main.py  new.py  printer.py  project.py  pull.py  remove.py  root.py  show.py  sync.py  utils.py  version.py
pytoil/config/: __init__.py  config.py  defaults.py
pytoil/editor/: __init__.py  editor.py
pytoil/environments/: __init__.py  abstract.py  base.py  conda.py  flit.py  poetry.py  reqs.py  venv.py  virtualenv.py
pytoil/git/: __init__.py  abstract.py  git.py
pytoil/repo/: __init__.py  repo.py
pytoil/starters/: __init__.py  base.py  go.py  python.py  rust.py
pytoil/vscode/: __init__.py  vscode.py
scripts/: poormans_dependabot.py
search/: search_index.json
src/pytoil/: __init__.py  __main__.py  _version.py  exceptions.py
src/pytoil/api/: __init__.py  api.py  queries.py
src/pytoil/cli/: bug.py  checkout.py  config.py  docs.py  find.py  gh.py  info.py  keep.py  new.py  printer.py  pull.py  remove.py  root.py  show.py  utils.py
src/pytoil/config/: config.py
src/pytoil/editor/: __init__.py  editor.py
src/pytoil/environments/: __init__.py  base.py  conda.py  flit.py  poetry.py  reqs.py  virtualenv.py
src/pytoil/git/: __init__.py  git.py
src/pytoil/repo/: __init__.py  repo.py
src/pytoil/starters/: __init__.py  base.py  go.py  python.py  rust.py
tests/: conftest.py  test_api.py  test_cli.py  test_conda.py  test_condaenv.py  test_config.py  test_editor.py  test_env.py  test_flit.py  test_git.py  test_obvious.py  test_poetry.py  test_repo.py  test_reqs.py  test_venv.py  test_virtualenv.py  test_vscode.py
tests/cli/: test_checkout.py  test_config.py  test_create.py  test_info.py  test_main.py  test_new.py  test_project.py  test_project_checkout.py  test_project_create.py  test_project_info.py  test_project_remove.py  test_remove.py  test_root.py  test_show.py  test_sync.py  test_utils.py  test_version.py
tests/environments/: test_conda.py  test_flit.py  test_poetry.py  test_requirements.py  test_venv.py  test_virtualenv.py
tests/starters/: test_go.py  test_python.py  test_rust.py
tests/testdata/: .pytoil.yml  repo.json  repo_no_license.json  repolist.json
